# flox

./: .gitignore  .mutmut-cache  .pre-commit-config.yaml  .readthedocs.yml  CLAUDE.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  asv.conf.json  codecov.yml  conftest.py  cubed-example.ipynb  devel  profile.html  profile.json  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  uv-numpy1.toml  uv-upstream.toml
.claude/: settings.local.json
.github/workflows/: benchmarks.yml  cancel-duplicate-runs.yaml  ci-additional.yaml  ci.yaml  linting.yaml  pypi.yaml  testpypi-release.yaml  upstream-dev-ci.yaml
asv_bench/: asv.conf.json  environment.yml  requirements.txt
asv_bench/.claude/: settings.local.json
asv_bench/benchmarks/: README_CI.md  __init__.py  cohorts.py  combine.py  cumulate.py  factorize.py  helpers.py  reduce.py
benchmarks/: combine.py  reduce.py
binder/: Dockerfile  apt.txt  environment.yml  postBuild
ci/: benchmark.yml  docs.yml  env-numpy1.yml  environment.yml  minimal-requirements.yml  no-dask.yml  no-numba.yml  no-xarray.yml  upstream-dev-env.yml
dask_groupby/: __init__.py  aggregations.py  core.py  xarray.py  xrutils.py
designs/: array-expr-integration.md
docs/: oisst.ipynb  requirements-docs.txt
docs/source/: aggregations.md  api.rst  arrays.md  conf.py  custom.md  engines.md  implementation.md  index.md  index.rst  intro.md  overview.md  usage.rst  user-stories.md  xarray.md
docs/source/_static/: style.css
docs/source/user-stories/: climatology-hourly-cubed.ipynb  climatology-hourly.ipynb  climatology.ipynb  custom-aggregations.ipynb  hourly-climatology.html  large-zonal-stats.ipynb  nD-bins.ipynb  overlaps.md
flox/: Untitled.ipynb  __init__.py  _version.py  aggregate_flox.py  aggregate_npg.py  aggregate_numbagg.py  aggregate_sparse.py  aggregations.py  cache.py  cohorts.py  core.py  core.py.rej  cubed.py  dask.py  dask_array_compat.py  dask_array_ops.py  duck_array_ops.py  expr.py  factorize.py  lib.py  multiarray.py  options.py  pint_compat.py  rechunk.py  reindex.py  scan.py  sketches.py  types.py  utils.py  visualize.py  xarray.py  xrdtypes.py  xrutils.py
flox/tests/: test_core.py  test_xarray.py
notebooks/: example-notebook.ipynb
plans/: array-expr-migration.md
tests/: __init__.py  conftest.py  strategies.py  test_asv.py  test_cohorts.py  test_core.py  test_properties.py  test_properties.py.rej  test_xarray.py  test_xarray_topk.py
tests/__snapshots__/: test_cohorts.ambr
